trunk/OldArchive/1b71351acd15bb6507579535054c3328-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:18:33: error: conflicting declaration ‘class TK’
 template <typename TK, typename TK>
                                 ^
main.cpp:18:11: error: ‘TK’ has a previous declaration as ‘class TK’
 template <typename TK, typename TK>
           ^
main.cpp:21:9: error: ‘TV’ does not name a type
         TV value;
         ^
main.cpp: In function ‘int main()’:
main.cpp:30:23: error: wrong number of template arguments (1, should be 2)
     unordered_tree<int> kaboom; // OH GOD
                       ^
main.cpp:19:7: error: provided for ‘template<class TK, class TK> class unordered_tree’
 class unordered_tree {
       ^
main.cpp:30:31: error: invalid type in declaration before ‘;’ token
     unordered_tree<int> kaboom; // OH GOD
                               ^
main.cpp:30:25: warning: unused variable ‘kaboom’ [-Wunused-variable]
     unordered_tree<int> kaboom; // OH GOD
                         ^
